; ModuleID = '/home/carl/AnghaBench/h2o/examples/libh2o/extr_simple.c_setup_ssl.c'
source_filename = "/home/carl/AnghaBench/h2o/examples/libh2o/extr_simple.c_setup_ssl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32* }

@accept_ctx = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SSL_OP_NO_SSLv2 = common dso_local global i32 0, align 4
@USE_MEMCACHED = common dso_local global i64 0, align 8
@libmemcached_receiver = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"127.0.0.1\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"h2o:ssl-resumption:\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [67 x i8] c"an error occurred while trying to load server certificate file:%s\0A\00", align 1
@SSL_FILETYPE_PEM = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [60 x i8] c"an error occurred while trying to load private key file:%s\0A\00", align 1
@.str.4 = private unnamed_addr constant [30 x i8] c"ciphers could not be set: %s\0A\00", align 1
@h2o_http2_alpn_protocols = common dso_local global i32 0, align 4
@h2o_http2_npn_protocols = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @setup_ssl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_ssl(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = call i32 (...) @SSL_load_error_strings()
  %9 = call i32 (...) @SSL_library_init()
  %10 = call i32 (...) @OpenSSL_add_all_algorithms()
  %11 = call i32 (...) @SSLv23_server_method()
  %12 = call i32 @SSL_CTX_new(i32 %11)
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 8
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 8
  %14 = load i32, i32* @SSL_OP_NO_SSLv2, align 4
  %15 = call i32 @SSL_CTX_set_options(i32 %13, i32 %14)
  %16 = load i64, i64* @USE_MEMCACHED, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %3
  store i32* @libmemcached_receiver, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 1), align 8
  %19 = call i32 @h2o_memcached_create_context(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 11211, i32 0, i32 1, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %20 = call i32 @h2o_accept_setup_memcached_ssl_resumption(i32 %19, i32 86400)
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 8
  %22 = call i32 @h2o_socket_ssl_async_resumption_setup_ctx(i32 %21)
  br label %23

23:                                               ; preds = %18, %3
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 8
  %25 = load i8*, i8** %5, align 8
  %26 = call i32 @SSL_CTX_use_certificate_chain_file(i32 %24, i8* %25)
  %27 = icmp ne i32 %26, 1
  br i1 %27, label %28, label %32

28:                                               ; preds = %23
  %29 = load i32, i32* @stderr, align 4
  %30 = load i8*, i8** %5, align 8
  %31 = call i32 @fprintf(i32 %29, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.2, i64 0, i64 0), i8* %30)
  store i32 -1, i32* %4, align 4
  br label %52

32:                                               ; preds = %23
  %33 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 8
  %34 = load i8*, i8** %6, align 8
  %35 = load i32, i32* @SSL_FILETYPE_PEM, align 4
  %36 = call i32 @SSL_CTX_use_PrivateKey_file(i32 %33, i8* %34, i32 %35)
  %37 = icmp ne i32 %36, 1
  br i1 %37, label %38, label %42

38:                                               ; preds = %32
  %39 = load i32, i32* @stderr, align 4
  %40 = load i8*, i8** %6, align 8
  %41 = call i32 @fprintf(i32 %39, i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.3, i64 0, i64 0), i8* %40)
  store i32 -1, i32* %4, align 4
  br label %52

42:                                               ; preds = %32
  %43 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_ctx, i32 0, i32 0), align 8
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @SSL_CTX_set_cipher_list(i32 %43, i8* %44)
  %46 = icmp ne i32 %45, 1
  br i1 %46, label %47, label %51

47:                                               ; preds = %42
  %48 = load i32, i32* @stderr, align 4
  %49 = load i8*, i8** %7, align 8
  %50 = call i32 @fprintf(i32 %48, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.4, i64 0, i64 0), i8* %49)
  store i32 -1, i32* %4, align 4
  br label %52

51:                                               ; preds = %42
  store i32 0, i32* %4, align 4
  br label %52

52:                                               ; preds = %51, %47, %38, %28
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}

declare dso_local i32 @SSL_load_error_strings(...) #1

declare dso_local i32 @SSL_library_init(...) #1

declare dso_local i32 @OpenSSL_add_all_algorithms(...) #1

declare dso_local i32 @SSL_CTX_new(i32) #1

declare dso_local i32 @SSLv23_server_method(...) #1

declare dso_local i32 @SSL_CTX_set_options(i32, i32) #1

declare dso_local i32 @h2o_accept_setup_memcached_ssl_resumption(i32, i32) #1

declare dso_local i32 @h2o_memcached_create_context(i8*, i32, i32, i32, i8*) #1

declare dso_local i32 @h2o_socket_ssl_async_resumption_setup_ctx(i32) #1

declare dso_local i32 @SSL_CTX_use_certificate_chain_file(i32, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @SSL_CTX_use_PrivateKey_file(i32, i8*, i32) #1

declare dso_local i32 @SSL_CTX_set_cipher_list(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
